# iptables-1.4.20

./: Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure.ac  configure.scan  libtool  log
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
include/: Makefile  Makefile.am  Makefile.in  iptables.h
include/librtc/: librt4c.h  librt4c.h~
iptables/: .iptables.c.swp  Makefile  Makefile.am  Makefile.in  iptables-restore.c  iptables-standalone.c  iptables-standalone.c~  iptables.c  iptables.c~
iptables/.deps/: xtables_multi-ip6tables-restore.Po  xtables_multi-ip6tables-save.Po  xtables_multi-ip6tables-standalone.Po  xtables_multi-ip6tables.Po  xtables_multi-iptables-restore.Po  xtables_multi-iptables-save.Po  xtables_multi-iptables-standalone.Po  xtables_multi-iptables-xml.Po  xtables_multi-iptables.Po  xtables_multi-xshared.Po  xtables_multi-xtables-multi.Po
iptables/.libs/: xtables-multi
libipq/: Makefile  Makefile.in
libiptc/: Makefile  Makefile.in  libiptc.c  libiptc.c~
libiptc/.deps/: libip4tc.Plo  libip6tc.Plo
libiptc/.libs/: libip4tc.lai  libip6tc.lai  libiptc.lai
librtc/: Makefile  Makefile.am  Makefile.in  librt4c.c  librt4c.c~  librt4c.pc  librt4c.pc.in  librt6c.pc  librt6c.pc.in  librtc.c  librtc.c~  librtc.pc  librtc.pc.in  ruletables.h  ruletables.h~
librtc/.deps/: librt4c.Plo  librt6c.Plo
librtc/.libs/: librt4c.lai  librt6c.lai  librtc.lai
libxtables/: Makefile  Makefile.in  xtables.c  xtables.c~
libxtables/.deps/: libxtables_la-xtables.Plo  (+1 more)
utils/: Makefile  Makefile.in
(+1 files in other folders)
